# TreeLens

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  demo.py  pyproject.toml  wire-protocol.md
.claude/agents/: contract-sync.md  invariant-guard.md
.github/workflows/: ci.yml
adapters/: __init__.py  in_memory.py  photoshop.md
docs/: open-problems.md  pattern.md  portability.md
js/: canonical_hash.js  check_vectors.js
schema/: attr-op.schema.json  envelope.schema.json  meta-selection-op.schema.json  node.schema.json  tree-op.schema.json
tests/: conftest.py  hash_vectors.json  hash_vectors_realworld.json  test_conformance.py  test_schema.py
treelens/: __init__.py  adapter.py  diff.py  hashing.py  lens.py  mirror.py
