[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "treelens"
version = "0.1.0"
description = "Server-side, diff-synced mirror of a host's live hierarchy — a host-agnostic pattern for building MCP servers over apps with large mutable trees (Photoshop, Figma, Unity, ...)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Aleksei Volkov" }]
keywords = ["mcp", "llm-agent", "snapshot", "diff", "tree", "photoshop", "figma", "unity"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
# The kernel is intentionally zero-dependency (stdlib only).
dependencies = []

[project.optional-dependencies]
# Dev/test only. `jsonschema` powers the wire-protocol schema suite (tests/
# test_schema.py); the kernel never imports it at runtime.
dev = ["pytest>=7", "jsonschema>=4.18"]

[project.urls]
Homepage = "https://github.com/avasec/TreeLens"
Source = "https://github.com/avasec/TreeLens"

[tool.hatch.build.targets.wheel]
# Ship only the host-agnostic package. adapters/, demo.py and tests/ are
# examples + tests, not part of the distribution.
packages = ["treelens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
